# india-district-nightlights-viirs

./: .gitignore  Makefile  README.md  index.html  pyproject.toml  requirements.txt
configs/: config.yaml
src/ntl_pipeline/: boundaries.py  cli.py  config.py  exporters.py  io.py  rasters.py  viirs_download.py  zonal.py
